FIX(postMenu): remove scrollbar on post overlay

--- a/next/src/app/globals.css
+++ b/next/src/app/globals.css
@@ -37,6 +37,12 @@ body {
   overflow-y: scroll;
 }
 
+html body[data-scroll-locked] {
+    overflow-y: visible !important;
+    overflow-x: hidden !important;
+    margin-right: 0px !important;
+}
+
 input,
 textarea {
   background-color: transparent;
